appId: host.exp.Exponent
---
- launchApp
- stopApp
- launchApp
- tapOn: "frontend"
- waitForAnimationToEnd:
    timeout: 100000
- takeScreenshot: screenshots/test
- tapOn: "Continue"
- tapOn: "Go Home"
- tapOn: "frontend"
- tapOn: "Continue as Guest"

